--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,19 +6,15 @@
         <div>
             <h1><a href="">Meharts's Blog</a></h1>
         </div>
+
         <div>
-            <p>
-                published: 21.06.2017, 12:30
-            </p>
-            <h2><a href="">Můj první příspěvek</a></h2>
-            <p>
-                Nějaký to text na zkoušku.
-            </p>
+            {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
-        <div>
-           <p>published: 21.06.2017, 12:40</p>
-           <h2><a href="">Můj druhý příspěvek</a></h2>
-           <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+    {% endfor %}
         </div>
     </body>
 
